testsuite/poke.pkl/apush-diag-4.pk
/* { dg-do compile } */

var a = int[3] ();

apush (a, 1); /* { dg-error "apush is not allowed on a bounded array" } */
